--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#292964",
-        "activityBar.activeBorder": "#9e4141",
-        "activityBar.background": "#292964",
+        "activityBar.activeBackground": "#49423d",
+        "activityBar.activeBorder": "#000000",
+        "activityBar.background": "#49423d",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
-        "activityBarBadge.background": "#9e4141",
+        "activityBarBadge.background": "#000000",
         "activityBarBadge.foreground": "#e7e7e7",
-        "sash.hoverBorder": "#292964",
-        "statusBar.background": "#1a1a40",
+        "sash.hoverBorder": "#49423d",
+        "statusBar.background": "#2d2926",
         "statusBar.foreground": "#e7e7e7",
-        "statusBarItem.hoverBackground": "#292964",
-        "statusBarItem.remoteBackground": "#1a1a40",
+        "statusBarItem.hoverBackground": "#49423d",
+        "statusBarItem.remoteBackground": "#2d2926",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#1a1a40",
+        "titleBar.activeBackground": "#2d2926",
         "titleBar.activeForeground": "#e7e7e7",
-        "titleBar.inactiveBackground": "#1a1a4099",
+        "titleBar.inactiveBackground": "#2d292699",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#1A1A40"
+    "peacock.color": "#2D2926FF"
 }
