--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,8 @@
         "titleBar.activeBackground": "#2d2926",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#2d292699",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "commandCenter.border": "#e7e7e799"
     },
     "peacock.color": "#2D2926FF"
 }
