--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,5 +19,6 @@
         "titleBar.inactiveForeground": "#e7e7e799",
         "commandCenter.border": "#e7e7e799"
     },
-    "peacock.color": "#2D2926FF"
+    "peacock.color": "#2D2926FF",
+    "liveServer.settings.port": 5501
 }
